tests/ui/coherence/impl[t]-foreign[fundamental[t]]-for-fundamental[t].stderr
error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/impl[t]-foreign[fundamental[t]]-for-fundamental[t].rs:10:10
   |
LL | impl<'a, T> Remote1<Box<T>> for &'a T {
   |          ^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/impl[t]-foreign[fundamental[t]]-for-fundamental[t].rs:13:10
   |
LL | impl<'a, T> Remote1<&'a T> for Box<T> {
   |          ^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0210`.
